<resources>
    <string name="app_name">ENVision</string>
    <string name="tagline">Business Made Simple</string>
    <string name="facebook_app_id">1612589265442252</string>
    <string name="general_alert_buttons_ok">Ok</string>
    <string name="FACEBOOK_APP_ID">1612589265442252</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">07e679a894a71ee2bfe9098dddf20fbd</string>
    <string name="device_offline_message">Your device is offline</string>
    <string name="sales">Sales</string>
    <string name="add_sale">Add Sale</string>
    <string name="product_detail">Product Detail</string>
    <string name="empty_sales">Currently, you do not have any sales. Please click the + button to add a sale</string>
    <string name="inventory">Inventory</string>
    <string name="empty_inventory">There are currently no products in your inventory. Please click the + button to add a product</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="add_product">Add Product</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="use_camera">Use Camera</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="total_cost">Total Cost</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string formatted="false" name="login_buttons_log_in_with_facebook">Log in with Facebook</string>
       <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major
        features of the application</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="rsv_default_search_hint">Search</string>
    <string name="search_hint">Find Item</string>
    <string name="save">Save</string>


        <string-array name="entry_array">
            <item>Cash</item>
            <item>Installment</item>
            <item>Installment Addon</item>
        </string-array>

    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="sign_outt">Sign Out</string>
    <string name="phone_title_text">phone_title_text</string>
    <string name="sign_out">sign_out</string>
    <string name="validationErrors">Validation Error</string>
    <string name="product_details">Product Details</string>
    <string name="error_file_not_created">File couldn\'t be created</string>
    <string name="exit_app_text">Are you sure you want to exit the app?</string>
    <string name="alert_sign_out">Are you sure you want to sign out?</string>

</resources>
