<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_form"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/grid_5">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextAppearance.App.TextInputLayout"
            tools:hintTextAppearance="@style/TextAppearance.AppCompat">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLines="1"
                android:nextFocusDown="@+id/quantity"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextAppearance.App.TextInputLayout"
            tools:hintTextAppearance="@style/TextAppearance.AppCompat">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/type_layout"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/totalcost_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextAppearance.App.TextInputLayout"
            tools:hintTextAppearance="@style/TextAppearance.AppCompat">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/totalcost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="33dp"
                android:hint="@string/total_cost"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:nextFocusDown="@+id/type_layout"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/top_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/add_product_image"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/selected_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/grey_background"

                    />

                <TextView
                    android:id="@+id/no_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/selected_photo"
                    android:layout_alignEnd="@+id/selected_photo"
                    android:layout_alignLeft="@+id/selected_photo"
                    android:layout_alignRight="@+id/selected_photo"
                    android:layout_alignStart="@+id/selected_photo"
                    android:layout_alignTop="@+id/selected_photo"
                    android:gravity="center"
                    android:text="No Picture Selected" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/gallery_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:weightSum="4">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_view_module_black_24dp" />

                <TextView
                    android:id="@+id/text_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:text="@string/choose_from_gallery"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:weightSum="4">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/camera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"


                    />


                <TextView
                    android:id="@+id/text_cam"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:text="@string/use_camera"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>